<resources>
    <string name="app_name">Acarsoy</string>
    <string name="activity_login_label">Uygulama girisi</string>
    <string name="activity_login_button">Giris yap</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_username">Email</string>
    <string name="power_format_kwatt">%s KW</string>
    <string name="power_format_mwatt">%s MW</string>
    <string name="wind_format">%s m/s</string>
    <string name="temperature">%s°C</string>
    <string name="title_activity_maps">Map</string>
    <string name="msg_while_loading_data">Error while loading data</string>
    <string name="msg_do_you_want_to_exit">Do you want to exit?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>
    <string name="toplam">toplam</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="listeye_goster">Listeye Goster</string>
    <string name="bugun">Bugun</string>
    <string name="bu_hafta">Bu Hafta</string>
    <string name="bu_ay">Bu Ay</string>
    <string name="bu_yil">Bu Yil</string>
</resources>
