<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.in.zeusapps.acarsoy.activities.LoginActivity">

    <ImageView
        android:layout_width="@dimen/activity_login_view_width"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"

        android:id="@+id/activity_login_image"/>

    <TextView
        android:layout_width="@dimen/activity_login_view_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/activity_login_label"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:id="@+id/activity_login_label"/>

    <EditText
        android:layout_width="@dimen/activity_login_view_width"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_username"
        android:inputType="text"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_password"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:id="@+id/activity_login_username"/>

    <EditText
        android:layout_width="@dimen/activity_login_view_width"
        android:layout_height="wrap_content"
        android:hint="@string/activity_login_password"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:id="@+id/activity_login_password"/>
    
    <Button
        android:layout_width="@dimen/activity_login_view_width"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"

        android:id="@+id/activity_login_button"/>

</android.support.constraint.ConstraintLayout>
